--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -74,11 +74,11 @@ const PROJECTS = [
   {
     title: "Quinti - Food Delivery App",
     description:
-      "Food delivery app in Flutter for remote areas. Connecting local businesses with new customers. Over 5k downloads.",
+      "A delivery platform built from scratch to connect local businesses in rural Peru with customers through scalable backend architecture and smooth user interfaces",
     link: "https://quinti.vercel.app/",
     github: "https://github.com/pheralb/svgl",
     image: "/projects/proq.png",
-    tags: [TAGS.FIREBASE, TAGS.FLUTTER, TAGS.DART, TAGS.TAILWIND],
+    tags: [TAGS.TYPESCRIPT, TAGS.NEXT, TAGS.NEST, TAGS.REACT, TAGS.FIREBASE, TAGS.POSTGRES  ],
   },
   // {
   //   title: "Interactive Virtual Menu - ProCarta",
