--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ import Desktop from "@/components/icons/Desktop.astro";
       </div>
       <p class="font-semibold lg:text-2xl">Full stack Developer</p>
       <p class="font-light mt-4 lg:max-w-[600px] md:text-xl text-[#f3f3f3]">
-        +4 years of experience. Software Engineer specialized in web development with Javascript
+        Software Engineer specialized in building scalable web systems with TypeScript, Node.js, React, and NestJS
       </p>
       <div class="flex justify-center md:justify-start">
         <div class="flex gap-3 mt-4">
@@ -56,9 +56,9 @@ import Desktop from "@/components/icons/Desktop.astro";
           <SocialTag url="https://github.com/Yero123">
             <GitHub1 class="w-8 h-8" />
           </SocialTag>
-          <SocialTag url="https://instagram.com">
+          <!-- <SocialTag url="https://www.instagram.com/yero_cs">
             <Instagram class="w-8 h-8" />
-          </SocialTag>
+          </SocialTag> -->
           <!-- <SocialTag url="https://youtube.com">
             <Youtube class="w-8 h-8" />
           </SocialTag> -->
