--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -7,9 +7,10 @@ interface Props {
   description: string
   link?: string
   date: string
+  location: string
 }
 
-const { title, company, description, link, date } = Astro.props
+const { title, company, description, link, date, location } = Astro.props
 ---
 
 <div
@@ -23,6 +24,7 @@ const { title, company, description, link, date } = Astro.props
 
       <h3 class="text-xl font-bold text-primary">{title}</h3>
       <h4 class="font-semibold text-xl text-gray-600 dark:text-white">{company}</h4>
+      <p class="p-0 m-0 text-sm text-gray-600/80 dark:text-white/80">{location}</p>
       <time class="p-0 m-0 text-sm text-gray-600/80 dark:text-white/80">{date}</time>
     </div>
   </div>
